<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_viewmodel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/viewmodel_exercise"
        app:layout_constraintBottom_toTopOf="@+id/btn_viewmodel"
        app:layout_constraintEnd_toEndOf="@+id/btn_viewmodel"
        app:layout_constraintStart_toStartOf="@+id/btn_viewmodel" />

    <Button
        android:id="@+id/btn_viewmodel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/viewmodel_exercise"
        app:layout_constraintBottom_toTopOf="@+id/tv_livedata"
        app:layout_constraintEnd_toEndOf="@+id/tv_livedata"
        app:layout_constraintStart_toStartOf="@+id/tv_livedata" />

    <TextView
        android:id="@+id/tv_livedata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/livedata_exercise"
        app:layout_constraintBottom_toTopOf="@+id/btn_livedata"
        app:layout_constraintEnd_toEndOf="@+id/btn_livedata"
        app:layout_constraintStart_toStartOf="@+id/btn_livedata" />

    <Button
        android:id="@+id/btn_livedata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/livedata_exercise"
        app:layout_constraintBottom_toTopOf="@+id/btn_livedata_api"
        app:layout_constraintEnd_toEndOf="@+id/btn_livedata_api"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_livedata_api" />

    <Button
        android:id="@+id/btn_livedata_api"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/livedata_with_api"
        app:layout_constraintBottom_toTopOf="@+id/btn_livedata_event"
        app:layout_constraintEnd_toEndOf="@+id/btn_livedata_event"
        app:layout_constraintStart_toStartOf="@+id/btn_livedata_event" />

    <Button
        android:id="@+id/btn_livedata_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/livedata_with_single_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_androidktx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/android_ktx_exercise"
        app:layout_constraintEnd_toEndOf="@+id/btn_livedata_event"
        app:layout_constraintStart_toStartOf="@+id/btn_livedata_event"
        app:layout_constraintTop_toBottomOf="@+id/btn_livedata_event" />

    <Button
        android:id="@+id/btn_androidktx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ktx_activity_and_fragment"
        app:layout_constraintEnd_toEndOf="@+id/tv_androidktx"
        app:layout_constraintStart_toStartOf="@+id/tv_androidktx"
        app:layout_constraintTop_toBottomOf="@+id/tv_androidktx" />

</androidx.constraintlayout.widget.ConstraintLayout>